# llama.cpp

examples/: CMakeLists.txt
examples/internvla/: CMakeLists.txt  internvla-cli.cpp
scripts/snapdragon/adb/: run-internvla.sh
