set(TARGET llama-internvla-cli)
add_executable(${TARGET} internvla-cli.cpp)
install(TARGETS ${TARGET} RUNTIME)
target_link_libraries(${TARGET} PRIVATE ggml llama ${CMAKE_THREAD_LIBS_INIT})
target_include_directories(${TARGET} PRIVATE ../../include)
if (TARGET ggml-hexagon)
	target_link_libraries(${TARGET} PRIVATE ggml-hexagon)
endif()
target_compile_features(${TARGET} PRIVATE cxx_std_17)
